# hpp-rbprm-corba

./: .gitignore  CMakeLists.txt
data/blender/: ant.blend  ant_in_cave.blend  ant_on_platforms.blend  ant_on_rock.blend  ant_trunk.blend  ant_wholebody_and_trunk.blend  cave_simplified2.blend  frictionCone_mu.blend  frog.blend  frog_in_plateforms.blend  high_plateforms.blend  jumper-man.blend  jumperman_cube_backJump.blend  kangaroo_trunk.blend  parkour_walls.blend  parkour_walls_reduced.blend  spiderman.blend  spiderman_on_cubes.blend  spiderman_trunk.blend  spiderman_trunk_on_cubes.blend
data/blender/environments/: cave.blend  cubeWorld2.blend  desert_decimated.blend  desert_for_kangaroo.blend  environment_sources  etang_envir_simplified.blend  high_plateforms.blend  high_plateforms_planning.blend  parkour_smallWallsExample.blend  parkour_theFloorIsLava.blend
data/blender/friction_cones/: frictionCone_mu06.blend  frictionCone_mu1.blend  frictionCone_mu2.blend
data/meshes/: cave.dae  cave.stl  cave_simplified.dae  cave_simplified.stl  cliff.stl  cliff_panel.stl  cubeWorld.stl  cubeWorld2.stl  cubeWorld2_panel.stl  cubeWorld_panel.stl  desert.dae  desert.stl  desert_for_kangaroo.dae  desert_for_kangaroo.stl  etang_envir.stl  high_plateforms.dae  high_plateforms.stl  high_plateforms_planning.stl  parkour_theFloorIsLava.stl  parkour_walls.dae  parkour_walls.stl  parkour_walls_reduced.stl  rock.stl
data/meshes/ant/: Abdomen.stl  Abdomen_box.stl  LAntena.stl  LAntenaFoot.stl  LBFoot.stl  LBShank.stl  LBThigh.stl  LFFoot.stl  LFShank.stl  LFThigh.stl  LMFoot.stl  LMShank.stl  LMThigh.stl  RAntena.stl  RAntenaFoot.stl  RBFoot.stl  RBShank.stl  RBThigh.stl  RFFoot.stl  RFShank.stl  RFThigh.stl  RMFoot.stl  RMShank.stl  RMThigh.stl  Skull.stl  Skull_box.stl  Thorax.stl  Thorax_box.stl  Thorax_view.dae  lbfoot_rom.stl  lffoot_rom.stl  lmfoot_rom.stl  rbfoot_rom.stl  rffoot_rom.stl  rmfoot_rom.stl
data/meshes/cones/: cone.dae  cone06.dae  cone1.dae
data/meshes/frog/: Head.stl  Head_box.stl  Head_view.dae  LFoot.stl  LFootToe.stl  LForearm.stl  LHand.stl  LHandFingers.stl  LHumerus.stl  LShank.stl  LThigh.stl  RFoot.stl  RFootToe.stl  RForearm.stl  RHand.stl  RHandFingers.stl  RHumerus.stl  RShank.stl  RThigh.stl  Torso.stl  Torso_box.stl  Torso_view.dae  lfoot_rom.stl  lhand_rom.stl  rfoot_rom.stl  rhand_rom.stl
data/meshes/kangaroo/: Head.stl  Head_box.stl  LArm.stl  LFoot.stl  LFootToe.stl  LForearm.stl  LHand.stl  LShank.stl  LThigh.stl  Pelvis.stl  Pelvis_box.stl  Pelvis_view.dae  RArm.stl  RFoot.stl  RFootToe.stl  RForearm.stl  RHand.stl  RShank.stl  RThigh.stl  Tail.stl  Tail_box.stl  Tailbase.stl  Tailbase_box.stl  Torso.stl  Torso_box.stl  Torso_view.dae  hand_rom.stl  lfoot_rom.stl  rfoot_rom.stl
data/meshes/lamp/: Ankle.stl  Foot.stl  Head.stl  HeadLink.stl  Head_box.stl  Head_view.dae  Shank.stl  Thigh.stl  foot_rom.stl
data/meshes/skeleton/: L1.stl  L2.stl  L3.stl  L4.stl  L5.stl  LFoot.dae  LFoot.stl  LFootToe.stl  LForearm.stl  LHand.dae  LHand.stl  LHumerus.stl  LShank.stl  LThigh.stl  Pelvis.dae  Pelvis.stl  Pelvis_view.dae  RFoot.dae  RFoot.stl  RFootToe.stl  RForearm.stl  RHand.dae  RHand.stl  RHumerus.stl  RShank.stl  RThigh.stl  Sacrum.stl  Skull.dae  Skull.stl  Thorax.stl  lfoot_rom.stl  lhand_rom.stl  pelvis_box.stl  rfoot_rom.stl  rhand_rom.stl  skull_box.stl  thorax_box.stl
data/meshes/spiderman/: lfoot_rom.stl  lhand_rom.stl  rfoot_rom.stl  rhand_rom.stl  spiderman-LFoot.stl  spiderman-LFootToe.stl  spiderman-LForearm.stl  spiderman-LHand.stl  spiderman-LHand_save.stl  spiderman-LHumerus.stl  spiderman-LShank.stl  spiderman-LThigh.stl  spiderman-RFoot.stl  spiderman-RFootToe.stl  spiderman-RForearm.stl  spiderman-RHand.stl  spiderman-RHand_save.stl  spiderman-RHumerus.stl  spiderman-RShank.stl  spiderman-RThigh.stl  spiderman-pelvis.stl  spiderman-pelvis_box.stl  spiderman-pelvis_view.dae  spiderman-skull.stl  spiderman-skull_box.stl  spiderman-thorax.stl  spiderman-thorax_box.stl  spiderman-thorax_view.dae  spiderman_cut_to_skel4.stl
data/srdf/: cliff.srdf  cubeWorld.srdf  desert.srdf  high_plateforms.srdf  rock.srdf
data/srdf/ant/: LBFootSphere.srdf  LFFootSphere.srdf  LMFootSphere.srdf  RBFootSphere.srdf  RFFootSphere.srdf  RMFootSphere.srdf  ant.srdf  ant_trunk.srdf
data/srdf/frog/: FrogLFootSphere.srdf  FrogLHandSphere.srdf  FrogRFootSphere.srdf  FrogRHandSphere.srdf  frog.srdf  frog_trunk.srdf
data/srdf/kangaroo/: KangarooLFootSphere.srdf  KangarooLHandSphere.srdf  kangaroo.srdf  (+3 more)
data/urdf/: cave.urdf  cliff.urdf  cubeWorld.urdf  cubeWorld2.urdf  desert.urdf  desert_for_kangaroo.urdf  etang_envir.urdf  high_plateforms.urdf  parkour_theFloorIsLava.urdf  parkour_walls.urdf  rock.urdf
doc/character_creation/: CharacterCreation.tex
script/blender/: fullAnimationSkinning.py
script/scenarios/: darpa_hyq_path.py  stair_bauzil_hrp2_interp.py  stair_bauzil_hrp2_path.py
script/tests/: ant_cave_interp.py  ant_cave_path.py  ant_cliff_infiniteU_path.py  ant_compute_DB.py  ant_plateforms_interp.py  ant_plateforms_path.py  ant_rock_contact.py  ant_test_interp.py  ant_test_path.py  armlessSkeleton_compute_DB.py  armlessSkeleton_desert_interp.py  armlessSkeleton_desert_path.py  autoRun.sh  convex_cone_test.py  darpa_hyq_interp.py  darpa_hyq_path.py  frog_compute_DB.py  frog_plateforms_interp.py  frog_plateforms_path.py  frog_test_interp.py  frog_test_path.py  hpp-runs.sh  hrp2_city1_path.py  hrp2_city_interp.py  jumping_hrp2_test_path.py  kangaroo_compute_DB.py  kangaroo_desert_interp.py  kangaroo_desert_path.py  lamp_compute_DB.py  lamp_plateforms_interp.py  lamp_plateforms_path.py  lamp_test_interp.py  lamp_test_path.py  parseRuns.py  robot_test_path.py  skeleton_autorun.py  skeleton_compute_DB.py  skeleton_desert_interp.py  skeleton_desert_path.py  skeleton_parkourSmallWallsExample_interp.py  (+30 more)
script/tools/: generateROMsAnt.py  generateROMsFrog.py  generateROMsKangaroo.py  generateROMsLamp.py  generateROMsSkeleton.py  generateROMsSpiderman.py
src/: CMakeLists.txt  hpp-rbprm-corba.cc  rbprmbuilder.impl.cc  rbprmbuilder.impl.hh  server.cc
(+69 files in other folders)
